--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
+    "sequelize": "^6.15.0",
     "sharp": "^0.29.3",
     "shortid": "^2.2.16",
     "slugify": "^1.6.5",
