--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.19.1",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
+    "connect-multiparty": "^2.2.0",
     "debug": "^4.3.3",
     "dotenv": "^14.2.0",
     "ejs": "^3.1.6",
@@ -24,6 +25,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-fileupload": "^1.2.1",
     "express-session": "^1.17.2",
+    "form-data": "^4.0.0",
     "jalali-moment": "^3.3.10",
     "mongoose": "^6.1.7",
     "morgan": "^1.10.0",
