--- a/config/config.env
+++ b/config/config.env
@@ -2,3 +2,4 @@ PORT =3000
 MONGO_URI = mongodb://localhost:27017/blog_db
 CAPTCHA_SECRET = 6LfC6zkeAAAAAMeQKHQND2nZAXeRZLaf8LYGPWUM
 SESSION_SECRET = 6LfC6zkeAAAAAMeQKHQND2
+JWT_SECRET = CjS5Sxc3DC9jrh
