--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.17.2",
     "form-data": "^4.0.0",
     "jalali-moment": "^3.3.10",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.7",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
