--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "app-root-path": "^3.0.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
+    "captchapng": "^0.0.1",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
     "connect-multiparty": "^2.2.0",
