--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "mehrdad website ",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node app",
+    "start": "node app",
     "dev": "cross-env NODE_ENV=development DEBUG=weblog-project nodemon app"
   },
   "keywords": [],
