--- a/config/config.env
+++ b/config/config.env
@@ -1,5 +1,6 @@
 PORT =3000
-MONGO_URI = mongodb://localhost:27017/blog_db
+MONGO_URI = mongodb+srv://Mnews:<PASSWORD>@cluster0.qx3vt.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+DATABASE_PASSWORD= 4wXhtrpereD6JnJ1
 CAPTCHA_SECRET = 6LfC6zkeAAAAAMeQKHQND2nZAXeRZLaf8LYGPWUM
 SESSION_SECRET = 6LfC6zkeAAAAAMeQKHQND2
 JWT_SECRET = CjS5Sxc3DC9jrh
