--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,4 @@
+NODE_ENV=development
 PORT =3000
 MONGO_URI = mongodb+srv://Mnews:<PASSWORD>@cluster0.qx3vt.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 DATABASE_PASSWORD= 4wXhtrpereD6JnJ1
